@@ -138,6 +138,7 @@
     <Compile Include="OptionDialog.Designer.cs">
       <DependentUpon>OptionDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrintDeck.cs" />
     <Compile Include="Program.cs">
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -212,7 +213,9 @@
     <None Include="Resources\filesaveall.png" />
     <None Include="Resources\fileclose.png" />
     <None Include="Resources\filesaveas.png" />
-    <Content Include="Changelog.txt" />
+    <Content Include="Changelog.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\icon_about.png" />
     <None Include="Resources\icon_configure.png" />
     <Content Include="Resources\icon_deck.png" />
@@ -221,6 +224,8 @@
     <None Include="App.config" />
     <None Include="Resources\icon_update.png" />
     <None Include="Resources\icon_search.png" />
+    <None Include="Resources\print_proxy.png" />
+    <None Include="Resources\print_list.png" />
     <Content Include="Resources\status_failed.png" />
     <Content Include="Resources\status_ok.png" />
   </ItemGroup>
